[tool.poetry]
name = "spkcspider"
description = "A secure, decentral platform for maintaining your online identity"
version = "0.20.5"
license = "MIT"
authors = ["Alexander Kaftan"]
homepage = "https://spkcspider.net"
readme = "README.md"
repository = "https://github.com/spkcspider/spkcspider"
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Django",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content :: Content Management System",
  "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]

keywords = [
  "online identity", "decentral networks"
]

[tool.poetry.dependencies]
python = ">=3.5"
django = '>=2.2'
django-simple-jsonfield = '>=0.3'
requests = '*'
certifi = '*'
bleach = '*'
rdflib = '*'
html5lib = '*'
cryptography = "*"
django-ranged-response = "*"
django-widget-tweaks = "*"
django-next-prev = "*"
django-fast-ratelimit = "*"
lru-dict = "*"

[tool.poetry.dev-dependencies]
django-extensions = '*'
Werkzeug = '*'
django-simple-captcha = "*"
spkcspider-domainauth = ">=0.4"
pylint = "*"

[tool.poetry.extras]
captcha = ["django-simple-captcha"]
fcgi = ["flipflop"]
mysql = ["mysqlclient", "django-mysql"]
pgsql = ["psycopg2"]
celery = ["celery", "sqlalchemy"]
test = ["django-webtest", "django-simple-captcha", "WSGIProxy2", "celery", "spkcspider-domainauth>=0.4"]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.4.0
isolated_build = True
envlist = py35-django22-{sqlite3,postgresql,mysql}, py{36,37}-django{22,master}-{sqlite3,postgresql,mysql}
# extras = test

[testenv]
whitelist_externals =
  psql
commands =
  !postgresql: python -Wd ./manage.py test tests
  postgresql: python -Wd ./manage.py test --keepdb tests
  postgresql: psql -c 'drop database spkcspider_tests;' -U postgres


setenv =
    PYTHONDONTWRITEBYTECODE=1
    sqlite3: DJANGO_SETTINGS_MODULE=testsettings.test_sqlite3
    postgresql: DJANGO_SETTINGS_MODULE=testsettings.test_postgresql
    mysql: DJANGO_SETTINGS_MODULE=testsettings.test_mysql

deps =
  django-webtest
  django-simple-captcha
  WSGIProxy2
  spkcspider-domainauth>=0.4
  celery
  django22: Django>=2.2a1,<=2.2.99
  djangomaster: https://github.com/django/django/archive/master.zip
  postgresql: psycopg2-binary
  mysql: mysqlclient>=1.3.13
  mysql: django-mysql


"""

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
